--- a/src/Components/Delete/Delete.module.css
+++ b/src/Components/Delete/Delete.module.css
@@ -20,3 +20,17 @@
     transform: scale(1 /*0.5*/) ;
     transition: 0.4s all;
 }
+
+
+.button {
+    margin: 1rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    background-color: #008CBA;
+    color: white;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #007B9A;
+}
