--- a/src/Components/Table/DataTable.module.css
+++ b/src/Components/Table/DataTable.module.css
@@ -21,3 +21,10 @@
 .dataTable th:hover {
     background-color: #ddd;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem;
+}
